--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.jsonparse"
+        applicationId "com.example.APOD"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -27,9 +27,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha06'
 
     implementation("com.squareup.okhttp3:okhttp:4.7.2")
-
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
