--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.jsonparse">
+    package="com.example.jsonparse" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,9 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".StartingActivity">
+        tools:ignore="GoogleAppIndexingWarning" >
+        <activity android:name=".asteroids_neows" >
+        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".StartingActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
