--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - tools
+    - build-tools-30.0.0
     # - platform-tools
 
 
     # The SDK version used to compile your project
     - android-29
+    - add-on
+    - extra
 
     # Additional components
     - extra-google-google_play_services
@@ -21,3 +23,8 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
+    -
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
