--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: android
 dist: trusty
 before_install:
   - chmod +x gradlew
-  - chmod +x gradlew
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+  - yes | sdkmanager "platforms;android-30"
+  - yes | sdkmanager "platforms;android-29"
   - sdkmanager --update
   - sdkmanager --licenses
 
