--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,13 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    -
+
+  # Emulator Management: Create, Start and Wait
+  before_script:
+    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
