--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ android:
 
   # Emulator Management: Create, Start and Wait
   before_script:
-    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-    - emulator -avd test -no-audio -no-window &
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
   licenses:
