--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 
 android:
   components:
+    - sys-img-armeabi-v7a-android-21
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
     - build-tools-29.0.3
@@ -26,11 +27,21 @@ android:
     # if you need to run emulator(s) during your tests
 
   # Emulator Management: Create, Start and Wait
+env:
+  global:
+    # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
+
+  # Emulator Management: Create, Start and Wait
   before_script:
     - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
+
+  script:
+    - android list target
+    - ./gradlew connectedAndroidTest
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
