--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: android
-dist: trusty
+jdk:
+  - oraclejdk8
+  -
 before_install:
   - chmod +x gradlew
   - yes | sdkmanager "platforms;android-30"
@@ -8,12 +10,7 @@ before_install:
 android:
   components:
     - sys-img-armeabi-v7a-android-21
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
     - build-tools-29.0.3
-    # - platform-tools
-
-    # The SDK version used to compile your project
     - android-30
     - add-on
     - extra
@@ -33,11 +30,13 @@ env:
     - ADB_INSTALL_TIMEOUT=8
 
   # Emulator Management: Create, Start and Wait
-  before_script:
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
+  - chmod u+x android-wait-for-emulator
+  - ./android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
   script:
     - android list target
