--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: android
+dist: trusty
 jdk:
   - oraclejdk8
-  -
 before_install:
   - chmod +x gradlew
   - yes | sdkmanager "platforms;android-30"
@@ -15,7 +15,7 @@ android:
     - add-on
     - extra
 
-      
+
 
     # Additional components
     - extra-google-google_play_services
