--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.jsonparse" >
+    package="com.example.DiscoverTheUniverse">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,22 +11,26 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/yeniicon"
+        android:label="Discover The Universe"
+        android:roundIcon="@mipmap/yeniicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
-        tools:ignore="GoogleAppIndexingWarning" >
-        <activity android:name=".asteroids_neows" >
-        </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".StartingActivity" >
+        tools:ignore="GoogleAppIndexingWarning">
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_stat_name" />
+
+        <activity android:name="com.example.DiscoverTheUniverse.asteroids_neows"></activity>
+        <activity android:name="com.example.DiscoverTheUniverse.MainActivity" />
+        <activity android:name="com.example.DiscoverTheUniverse.StartingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
