--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
 
     <application
         android:allowBackup="true"
-        android:requestLegacyExternalStorage="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/yeniicon"
         android:label="Discover The Universe"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/yeniicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".OnboardingAdapters.StartingActivity" />
         <activity android:name=".FavoritesActivity" />
         <activity android:name=".NavigationUI.Info" />
         <activity android:name=".NavigationUI.EpicActivity" />
@@ -30,7 +31,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".StartingActivity">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
