--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.DiscoverTheUniverse">
+    package="com.example.discovertheuniverse">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,22 +17,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".OnboardingAdapters.StartingActivity" />
-        <activity android:name=".FavoritesActivity" />
-        <activity android:name=".NavigationUI.Info" />
-        <activity android:name=".NavigationUI.EpicActivity" />
+        <activity android:name="com.example.discovertheuniverse.OnboardingAdapters.StartingActivity" />
+        <activity android:name="com.example.discovertheuniverse.FavoritesActivity" />
+        <activity android:name="com.example.discovertheuniverse.NavigationUI.Info" />
+        <activity android:name="com.example.discovertheuniverse.NavigationUI.EpicActivity" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_stat_name" />
 
-        <activity android:name=".NavigationUI.asteroids_neows" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name="com.example.discovertheuniverse.NavigationUI.asteroids_neows" />
+        <activity android:name="com.example.discovertheuniverse.MainActivity" />
+        <activity android:name="com.example.discovertheuniverse.LoginActivity" />
+        <activity android:name="com.example.discovertheuniverse.ProfileActivity" />
+        <activity android:name="com.example.discovertheuniverse.RegisterActivity" />
         <activity
-            android:name=".SplashScreen"
+            android:name="com.example.discovertheuniverse.SplashScreen"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
