--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven {
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.0.2'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,7 +24,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven {
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
     }
 }
 
